@@ -2,6 +2,8 @@ Process Hacker
 
 1.1.3.0
  * Completely rewrote thread list code
+ * Can now display kernel threads on Vista
+ * Disables thread priority menu item when there is an error
 
 1.1.2.0
  * Completely rewrote process list code
